<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#416171"
    android:layout_height="match_parent"
    tools:context=".Register.varifiy_otp_forget_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/forgot_back_btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/complete_Btn"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="480dp"
                android:background="@drawable/button_background_white"
                android:text="@string/complete"
                android:onClick="Rest_password"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.chaos.view.PinView

                android:id="@+id/PinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="200dp"
                android:cursorVisible="false"
                android:hint="@string/_0000"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:hideLineWhenFilled="true"
                app:itemCount="4"
                app:itemHeight="58dp"
                app:itemRadius="10dp"
                app:itemSpacing="15dp"
                app:itemWidth="48dp"
                app:lineColor="@color/black"
                app:lineWidth="2dp"
                app:viewType="rectangle" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/PinView"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/recive"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sent_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:layout_centerHorizontal="true"
                android:text="@string/sent_again"
                android:textColor="#FFA439"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>